--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
       --bg: #0b1220;
       --card: rgba(16, 26, 51, 0.62);
       --text: #eaf0ff;
-      --muted: rgba(234, 240, 255, 0.72);
+      --muted: rgba(234, 240, 255, 0.78);
       --border: rgba(255,255,255,0.12);
       --shadow: rgba(0,0,0,0.35);
-      --accent: #6ee7ff;
-      --accent2: #7c5cff;
-      --ring: rgba(110,231,255,0.25);
     }
 
     *{ box-sizing:border-box; }
@@ -26,8 +23,8 @@
       color: var(--text);
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
 
-      /* Background image */
-      background-image: url("background.png");
+      /* ✅ TON ARRIÈRE-PLAN (image déjà dans ton repo) */
+      background-image: url("image%20compagnie.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -40,19 +37,17 @@
       padding: 28px;
     }
 
-    /* Dark overlay for readability */
+    /* Overlay sombre pour bien lire le texte */
     body::before{
       content:"";
       position: fixed;
       inset: 0;
-      background: rgba(0,0,0,0.55);
+      background: rgba(0,0,0,0.58);
       pointer-events: none;
       z-index: -1;
     }
 
-    .wrap{
-      width: min(980px, 100%);
-    }
+    .wrap{ width: min(980px, 100%); }
 
     .card{
       background: var(--card);
@@ -66,17 +61,9 @@
 
     .header{
       display:flex;
-      gap: 16px;
-      align-items:center;
-      justify-content: space-between;
-      padding: 22px 22px 10px 22px;
-    }
-
-    .brand{
-      display:flex;
       gap: 14px;
-      align-items:center;
-      min-width: 0;
+      align-items:flex-start;
+      padding: 22px 22px 12px 22px;
     }
 
     .logo{
@@ -84,8 +71,8 @@
       height: 46px;
       border-radius: 14px;
       border: 1px solid rgba(255,255,255,0.14);
-      background: linear-gradient(135deg, rgba(124,92,255,0.45), rgba(110,231,255,0.25));
-      box-shadow: 0 0 0 6px rgba(110,231,255,0.08);
+      background: rgba(255,255,255,0.08);
+      box-shadow: 0 0 0 6px rgba(255,255,255,0.06);
       flex: 0 0 auto;
     }
 
@@ -93,15 +80,12 @@
       margin:0;
       font-size: clamp(22px, 3.5vw, 36px);
       letter-spacing: -0.02em;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
     }
 
     .subtitle{
-      margin: 6px 0 0 0;
+      margin: 8px 0 0 0;
       color: var(--muted);
-      line-height: 1.55;
+      line-height: 1.65;
       font-size: 15px;
     }
 
@@ -147,10 +131,10 @@
       padding: 12px 14px;
       border-radius: 14px;
       border: 1px solid rgba(255,255,255,0.14);
-      background: linear-gradient(135deg, rgba(124,92,255,0.65), rgba(110,231,255,0.22));
+      background: rgba(255,255,255,0.10);
       color: var(--text);
       text-decoration:none;
-      font-weight: 700;
+      font-weight: 750;
       letter-spacing: 0.01em;
       box-shadow: 0 10px 30px rgba(0,0,0,0.22);
       transition: transform .15s ease, filter .15s ease, box-shadow .15s ease;
@@ -162,9 +146,8 @@
       box-shadow: 0 12px 38px rgba(0,0,0,0.28);
     }
 
-    .btn.secondary{
-      background: rgba(255,255,255,0.08);
-      font-weight: 650;
+    .btn.primary{
+      background: linear-gradient(135deg, rgba(124,92,255,0.75), rgba(110,231,255,0.22));
     }
 
     ul{
@@ -187,18 +170,17 @@
     }
 
     .copyLink{
-      color: rgba(234,240,255,0.7);
+      color: rgba(234,240,255,0.75);
       text-decoration: none;
       border-bottom: 1px dashed rgba(234,240,255,0.35);
       cursor: pointer;
       transition: color .15s ease;
       white-space: nowrap;
     }
-    .copyLink:hover{ color: rgba(234,240,255,0.92); }
+    .copyLink:hover{ color: rgba(234,240,255,0.95); }
 
     @media (max-width: 820px){
       .content{ grid-template-columns: 1fr; }
-      .header{ flex-direction: column; align-items: flex-start; }
     }
   </style>
 </head>
@@ -206,34 +188,33 @@
 <body>
   <div class="wrap">
     <div class="card">
+
       <div class="header">
-        <div class="brand">
-          <div class="logo" aria-hidden="true"></div>
-          <div>
-            <h1>Ma boutique</h1>
-            <p class="subtitle">
-              <strong>Bonjour ! 👋</strong><br>
-              Je suis un passionné de création, de modélisation et d’impression 3D.<br>
-              Vous pouvez retrouver mes créations sur <strong>Amazon</strong> via le bouton ci-dessous.<br>
-              Il y a aussi possibilité de <strong>création / modélisation sur mesure</strong>, selon vos besoins (au choix).
-            </p>
-          </div>
+        <div class="logo" aria-hidden="true"></div>
+        <div>
+          <h1>Ma boutique</h1>
+          <p class="subtitle">
+            <strong>Bonjour ! 👋</strong><br>
+            Startup créée par un passionné de <strong>création</strong>, de <strong>modélisation</strong> et d’<strong>impression 3D</strong>.<br>
+            Vous pouvez trouver mes créations sur <strong>Amazon</strong> via le bouton ci-dessous.<br>
+            Il y a aussi possibilité de <strong>création / modélisation sur mesure</strong>, selon vos besoins (au choix).
+          </p>
         </div>
       </div>
 
       <div class="content">
         <section class="panel">
           <h2>Accès direct</h2>
-          <p>Mes produits (et nouveautés) sont dispo via le lien ci-dessous. Le lien s’ouvre dans un nouvel onglet.</p>
+          <p>Clique ici pour voir mes créations sur Amazon (le lien s’ouvre dans un nouvel onglet).</p>
 
           <div class="btnRow">
-            <a class="btn"
+            <a class="btn primary"
                href="TON_LIEN_AMAZON_ICI"
                target="_blank" rel="noopener noreferrer">
               Voir sur Amazon →
             </a>
 
-            <a class="btn secondary"
+            <a class="btn"
                href="mailto:D3DThomz@hotmail.com?subject=Demande%20sur%20mesure%20-%20D3DThomz&body=Bonjour%20D3DThomz%2C%0A%0AJe%20voudrais%20une%20cr%C3%A9ation%20sur%20mesure.%0A-%20Type%20de%20pi%C3%A8ce%20%3A%0A-%20Dimensions%20%3A%0A-%20Mati%C3%A8re%20(PLA%2FPETG%2FTPU)%20%3A%0A-%20Couleur%20%3A%0A-%20Quantit%C3%A9%20%3A%0A-%20Budget%20%3A%0A-%20D%C3%A9lai%20%3A%0A%0AMerci%20!"
                target="_blank" rel="noopener noreferrer">
               Demande sur mesure ✨
@@ -242,26 +223,19 @@
         </section>
 
         <aside class="panel">
-          <h3>Sur mesure</h3>
+          <h3>Ce que je fais</h3>
           <ul>
-            <li>Création / modélisation 3D (au choix)</li>
-            <li>Pièces, supports, accessoires personnalisés</li>
-            <li>Prototype, ajustements et itérations</li>
+            <li>Créations 3D / accessoires</li>
+            <li>Modélisation sur mesure (au choix)</li>
+            <li>Impression & prototypes</li>
           </ul>
 
           <p style="margin-top:12px;">
-            <strong>Email :</strong>
-            <a href="mailto:D3DThomz@hotmail.com" style="color:rgba(234,240,255,0.88);">
+            <strong>Contact :</strong><br>
+            <a href="mailto:D3DThomz@hotmail.com" style="color:rgba(234,240,255,0.92); text-decoration:none;">
               D3DThomz@hotmail.com
             </a>
           </p>
-
-          <h3 style="margin-top:14px;">Exemples</h3>
-          <ul>
-            <li>Supports (téléphone, outils, câbles, etc.)</li>
-            <li>Accessoires & pièces de remplacement</li>
-            <li>Objets déco / idées cadeaux</li>
-          </ul>
         </aside>
       </div>
 
@@ -269,6 +243,7 @@
         <div>© <span id="year"></span> — D3DThomz</div>
         <a class="copyLink" href="#" id="copyLink">Copier le lien du site</a>
       </div>
+
     </div>
   </div>
 
@@ -287,4 +262,3 @@
   </script>
 </body>
 </html>
-background-image: url("background.pnj"); 
